fix services on mobile, take 2

--- a/lmisite/main_site/static/main_site/style/services.scss
+++ b/lmisite/main_site/static/main_site/style/services.scss
@@ -142,7 +142,7 @@
         max-width: unset;
         grid-template-columns: 1fr !important;
 
-        .title {
+        .title, .service-content {
           grid-column: 1 !important;
         }
 
